Contrast fix

--- a/site/web/app/themes/sage/resources/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/resources/assets/styles/common/_global.scss
@@ -1,3 +1,5 @@
 body {
   font-family: $consolas;
+  background: #dadedf;
+  color: #373d3f;
 }
